[gd_scene load_steps=22 format=3 uid="uid://c32ha1am3hyc3"]

[ext_resource type="Script" uid="uid://cujcp8va1fsm" path="res://Scripts/Level1.gd" id="1_vly50"]
[ext_resource type="PackedScene" uid="uid://dvq7lryf0brtk" path="res://Scenes/Player.tscn" id="2_c5erv"]
[ext_resource type="Texture2D" uid="uid://bsj1csrlcpblb" path="res://Assets/Background/Shelf2.png" id="2_u1b78"]
[ext_resource type="Texture2D" uid="uid://mi5nvu5uqni4" path="res://Assets/Background/Shelf1.png" id="3_bdr3p"]
[ext_resource type="Texture2D" uid="uid://bk3usd6irky7f" path="res://Assets/Background/Shelf3.png" id="4_wwu6c"]
[ext_resource type="Texture2D" uid="uid://k1r76x3prtwe" path="res://Assets/Background/ShelfSide.png" id="5_yymuf"]
[ext_resource type="Texture2D" uid="uid://fe8hv77wvgay" path="res://Assets/Background/Checkout.png" id="6_esggg"]
[ext_resource type="Texture2D" uid="uid://bx22bmgne5n2y" path="res://Assets/Background/FlatSurface.png" id="8_mcj63"]
[ext_resource type="Texture2D" uid="uid://yd2mg8usjrts" path="res://Assets/Background/Sign1.png" id="9_af2a1"]
[ext_resource type="Texture2D" uid="uid://mhgldyxx32ho" path="res://Assets/Background/EmptyCrate.png" id="10_ocmlb"]
[ext_resource type="Texture2D" uid="uid://cveuh27gmg0q4" path="res://Assets/Background/FullCrate.png" id="11_tlxhh"]
[ext_resource type="Texture2D" uid="uid://dlr4v4ohgyj6b" path="res://Assets/Background/Sign3.png" id="12_rxhxl"]
[ext_resource type="Texture2D" uid="uid://bnjgdohrotji3" path="res://Assets/Background/Vent1.png" id="13_h54da"]
[ext_resource type="PackedScene" uid="uid://cvan5thj1xpyp" path="res://Scenes/check_me_out_bot.tscn" id="13_u1b78"]
[ext_resource type="Texture2D" uid="uid://diditdcjl44ys" path="res://Assets/Heads/Head20.png" id="13_yymuf"]
[ext_resource type="PackedScene" uid="uid://2fkpvpe80477" path="res://Scenes/BGshopperLeft.tscn" id="14_wwu6c"]
[ext_resource type="PackedScene" uid="uid://dtp8j2iykgqfr" path="res://Scenes/BGshopperRight.tscn" id="15_yymuf"]
[ext_resource type="AudioStream" uid="uid://bju5ibhuswlfy" path="res://Assets/Music/Quircky Shop.wav" id="18_mcj63"]
[ext_resource type="AudioStream" uid="uid://ixdufv68wxqw" path="res://Assets/SFX/Store Ambience 2.wav" id="19_af2a1"]
[ext_resource type="AudioStream" uid="uid://dldyd0q0epqh8" path="res://Assets/SFX/Entrance Chime.wav" id="20_ocmlb"]
[ext_resource type="AudioStream" uid="uid://cwie23idkllb8" path="res://Assets/SFX/Announcement 2.wav" id="21_af2a1"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_vly50")

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
z_index = -12
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.593134, 0.593134, 0.593134, 1)

[node name="ColorRect5" type="ColorRect" parent="Background"]
z_index = -8
offset_right = 1152.0
offset_bottom = 85.0
color = Color(0.404118, 0.596902, 0.860641, 1)

[node name="ColorRect6" type="ColorRect" parent="Background"]
z_index = -5
offset_right = 83.0
offset_bottom = 48.0
color = Color(0.404118, 0.596902, 0.860641, 1)

[node name="ColorRect2" type="ColorRect" parent="Background"]
z_index = -11
offset_top = 280.0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.783523, 0.783523, 0.783523, 1)

[node name="ColorRect3" type="ColorRect" parent="Background"]
z_index = -11
offset_left = 284.0
offset_top = 1.00001
offset_right = 524.0
offset_bottom = 421.0
rotation = -0.383972
color = Color(0.783523, 0.783523, 0.783523, 1)

[node name="ColorRect4" type="ColorRect" parent="Background"]
z_index = -11
offset_left = 321.0
offset_top = -89.0
offset_right = 561.0
offset_bottom = 331.0
rotation = 0.383972
color = Color(0.783523, 0.783523, 0.783523, 1)

[node name="BackgroundObjects" type="Node2D" parent="."]
position = Vector2(0, 20)

[node name="TextureRect" type="TextureRect" parent="BackgroundObjects"]
z_index = -4
offset_left = 991.0
offset_top = 90.0
offset_right = 1031.0
offset_bottom = 139.0
scale = Vector2(4, 4)
texture = ExtResource("2_u1b78")

[node name="TextureRect9" type="TextureRect" parent="BackgroundObjects"]
z_index = -4
offset_left = 91.0
offset_top = 22.0
offset_right = 131.0
offset_bottom = 71.0
scale = Vector2(3, 3)
texture = ExtResource("2_u1b78")

[node name="TextureRect10" type="TextureRect" parent="BackgroundObjects"]
z_index = -4
offset_left = -31.0
offset_top = 22.0
offset_right = 9.0
offset_bottom = 71.0
scale = Vector2(3, 3)
texture = ExtResource("3_bdr3p")

[node name="TextureRect11" type="TextureRect" parent="BackgroundObjects"]
z_index = -5
offset_left = 618.0
offset_top = 24.0
offset_right = 658.0
offset_bottom = 73.0
scale = Vector2(3, 3)
texture = ExtResource("2_u1b78")

[node name="TextureRect12" type="TextureRect" parent="BackgroundObjects"]
z_index = -5
offset_left = 737.0
offset_top = 24.0
offset_right = 777.0
offset_bottom = 73.0
scale = Vector2(3, 3)
texture = ExtResource("4_wwu6c")

[node name="TextureRect13" type="TextureRect" parent="BackgroundObjects"]
z_index = -5
offset_left = 857.0
offset_top = 25.0
offset_right = 897.0
offset_bottom = 74.0
scale = Vector2(3, 3)
texture = ExtResource("2_u1b78")

[node name="TextureRect14" type="TextureRect" parent="BackgroundObjects"]
z_index = -5
offset_left = 977.0
offset_top = 26.0
offset_right = 1017.0
offset_bottom = 75.0
scale = Vector2(3, 3)
texture = ExtResource("3_bdr3p")

[node name="TextureRect15" type="TextureRect" parent="BackgroundObjects"]
z_index = -5
offset_left = 1088.0
offset_top = 14.0
offset_right = 1128.0
offset_bottom = 80.0
scale = Vector2(4, 4)
texture = ExtResource("5_yymuf")
stretch_mode = 2

[node name="TextureRect16" type="TextureRect" parent="BackgroundObjects"]
z_index = -7
offset_left = 573.0
offset_top = -4.0
offset_right = 613.0
offset_bottom = 45.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect17" type="TextureRect" parent="BackgroundObjects"]
z_index = -7
offset_left = 648.0
offset_top = -4.0
offset_right = 688.0
offset_bottom = 45.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect18" type="TextureRect" parent="BackgroundObjects"]
z_index = -7
offset_left = 723.0
offset_top = -5.0
offset_right = 763.0
offset_bottom = 44.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("2_u1b78")

[node name="TextureRect19" type="TextureRect" parent="BackgroundObjects"]
z_index = -7
offset_left = 798.0
offset_top = -6.0
offset_right = 838.0
offset_bottom = 43.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect20" type="TextureRect" parent="BackgroundObjects"]
z_index = -6
offset_left = 871.0
offset_top = -6.0
offset_right = 911.0
offset_bottom = 43.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect21" type="TextureRect" parent="BackgroundObjects"]
z_index = -6
offset_left = 938.0
offset_top = -5.0
offset_right = 978.0
offset_bottom = 44.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect22" type="TextureRect" parent="BackgroundObjects"]
z_index = -6
offset_left = 1010.0
offset_top = -5.0
offset_right = 1050.0
offset_bottom = 44.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect23" type="TextureRect" parent="BackgroundObjects"]
z_index = -6
offset_left = 1083.0
offset_top = -6.0
offset_right = 1123.0
offset_bottom = 43.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect24" type="TextureRect" parent="BackgroundObjects"]
z_index = -7
offset_left = 178.0
offset_top = -7.0
offset_right = 218.0
offset_bottom = 42.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_wwu6c")

[node name="TextureRect25" type="TextureRect" parent="BackgroundObjects"]
z_index = -7
offset_left = 105.0
offset_top = -7.0
offset_right = 145.0
offset_bottom = 42.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect26" type="TextureRect" parent="BackgroundObjects"]
z_index = -5
offset_left = 32.0
offset_top = -7.0
offset_right = 72.0
offset_bottom = 42.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("2_u1b78")

[node name="TextureRect27" type="TextureRect" parent="BackgroundObjects"]
z_index = -5
offset_left = -41.0
offset_top = -8.0
offset_right = -1.0
offset_bottom = 41.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_bdr3p")

[node name="TextureRect2" type="TextureRect" parent="BackgroundObjects"]
z_index = -4
offset_left = 661.0
offset_top = 90.0
offset_right = 701.0
offset_bottom = 139.0
scale = Vector2(4, 4)
texture = ExtResource("3_bdr3p")

[node name="TextureRect3" type="TextureRect" parent="BackgroundObjects"]
z_index = -4
offset_left = 826.0
offset_top = 90.0
offset_right = 866.0
offset_bottom = 139.0
scale = Vector2(4, 4)
texture = ExtResource("3_bdr3p")

[node name="TextureRect4" type="TextureRect" parent="BackgroundObjects"]
z_index = -4
offset_left = -25.0
offset_top = 89.0
offset_right = 15.0
offset_bottom = 138.0
scale = Vector2(4, 4)
texture = ExtResource("3_bdr3p")

[node name="TextureRect5" type="TextureRect" parent="BackgroundObjects"]
z_index = 4
offset_left = 892.0
offset_top = 397.0
offset_right = 932.0
offset_bottom = 479.0
scale = Vector2(4, 4)
texture = ExtResource("6_esggg")

[node name="TextureRect7" type="TextureRect" parent="BackgroundObjects"]
z_index = 10
offset_left = 1103.0
offset_top = 127.0
offset_right = 1121.0
offset_bottom = 214.0
scale = Vector2(4.4, 4.4)
texture = ExtResource("5_yymuf")

[node name="TextureRect8" type="TextureRect" parent="BackgroundObjects"]
z_index = -3
offset_left = 984.0
offset_top = 283.0
offset_right = 1016.0
offset_bottom = 331.0
scale = Vector2(4, 4)
texture = ExtResource("8_mcj63")
stretch_mode = 2

[node name="TextureRect28" type="TextureRect" parent="BackgroundObjects"]
z_index = -8
offset_left = 389.0
offset_top = -8.0
offset_right = 429.0
offset_bottom = 74.0
scale = Vector2(2, 2)
texture = ExtResource("9_af2a1")
stretch_mode = 2

[node name="TextureRect29" type="TextureRect" parent="BackgroundObjects"]
z_index = -7
offset_left = 334.0
offset_top = 40.0
offset_right = 374.0
offset_bottom = 122.0
scale = Vector2(2, 2)
texture = ExtResource("10_ocmlb")
stretch_mode = 2

[node name="TextureRect30" type="TextureRect" parent="BackgroundObjects"]
z_index = -7
offset_left = 412.0
offset_top = 41.0
offset_right = 452.0
offset_bottom = 123.0
scale = Vector2(2, 2)
texture = ExtResource("11_tlxhh")
stretch_mode = 2

[node name="TextureRect31" type="TextureRect" parent="BackgroundObjects"]
z_index = -3
offset_left = 411.0
offset_top = 106.0
offset_right = 451.0
offset_bottom = 188.0
scale = Vector2(2.2, 2.2)
texture = ExtResource("11_tlxhh")
stretch_mode = 2

[node name="TextureRect32" type="TextureRect" parent="BackgroundObjects"]
z_index = -3
offset_left = 325.0
offset_top = 106.0
offset_right = 365.0
offset_bottom = 188.0
scale = Vector2(2.2, 2.2)
texture = ExtResource("11_tlxhh")
stretch_mode = 2

[node name="TextureRect33" type="TextureRect" parent="BackgroundObjects"]
z_index = -3
offset_left = 115.0
offset_top = 161.0
offset_right = 155.0
offset_bottom = 243.0
scale = Vector2(4, 4)
texture = ExtResource("12_rxhxl")
stretch_mode = 2

[node name="TextureRect34" type="TextureRect" parent="BackgroundObjects"]
z_index = -3
offset_left = 279.0
offset_top = -16.0
offset_right = 297.0
offset_bottom = -2.0
scale = Vector2(2, 2)
texture = ExtResource("13_h54da")
stretch_mode = 2

[node name="TextureRect35" type="TextureRect" parent="BackgroundObjects"]
z_index = -3
offset_left = 513.0
offset_top = -17.0
offset_right = 531.0
offset_bottom = -3.0
scale = Vector2(2, 2)
texture = ExtResource("13_h54da")
stretch_mode = 2

[node name="TextureRect36" type="TextureRect" parent="BackgroundObjects"]
z_index = -3
offset_left = 806.0
offset_top = 554.0
offset_right = 847.0
offset_bottom = 592.0
scale = Vector2(2, 2)
texture = ExtResource("13_yymuf")
flip_h = true

[node name="BackgroundNPCs" type="Node2D" parent="."]

[node name="CheckMeOutBot" parent="BackgroundNPCs" instance=ExtResource("13_u1b78")]
z_index = 15
position = Vector2(1110, 600)
scale = Vector2(6, 6)

[node name="BGshopperLeft" parent="BackgroundNPCs" instance=ExtResource("14_wwu6c")]
z_index = -6
position = Vector2(200, 72)
scale = Vector2(-0.33, 0.33)

[node name="BGshopperRight" parent="BackgroundNPCs" instance=ExtResource("15_yymuf")]
z_index = -6
scale = Vector2(0.33, 0.33)

[node name="WAVR" parent="." instance=ExtResource("2_c5erv")]

[node name="NPC Slots" type="Node2D" parent="."]

[node name="Spawn" type="Node2D" parent="NPC Slots"]
position = Vector2(1152, 240)

[node name="Wait 1" type="Node2D" parent="NPC Slots"]
position = Vector2(827, 223)

[node name="Wait 2" type="Node2D" parent="NPC Slots"]
position = Vector2(771, 334)

[node name="Wait 3" type="Node2D" parent="NPC Slots"]
position = Vector2(915, 256)

[node name="Wait 4" type="Node2D" parent="NPC Slots"]
position = Vector2(854, 374)

[node name="Exit" type="Node2D" parent="NPC Slots"]
position = Vector2(-202, 242)

[node name="BGshopperWait" type="Node2D" parent="NPC Slots"]
position = Vector2(410, 72)

[node name="BGshopperRightEnd" type="Node2D" parent="NPC Slots"]
position = Vector2(641, 72)

[node name="BGshopperLeftEnd" type="Node2D" parent="NPC Slots"]
position = Vector2(201, 70)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_mcj63")
autoplay = true

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_af2a1")
volume_db = -7.0
autoplay = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_ocmlb")
volume_db = -20.0

[node name="SFX2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_af2a1")
volume_db = 10.0
